kubernetes/apps/longhorn-system/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: cilium
  rules:
    - host: longhorn.${CLUSTER_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: longhorn-frontend
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - longhorn.${CLUSTER_DOMAIN}
      secretName: longhorn-tls-certificate
